fix: minor bugs squashing for new search book page (#933)
* chore: adjust not found books text displaying

* fix: hidden image blocking pointer

* chore: add go back in manual adding

* fix: refactor returning to book search

* chore: fix secondary button hover

--- a/apps/frontend/src/modules/common/components/button/index.module.css
+++ b/apps/frontend/src/modules/common/components/button/index.module.css
@@ -43,7 +43,7 @@
 }
 
 .secondary-button.button {
-  @apply bg-muted text-primary hover:bg-secondary/80;
+  @apply bg-muted text-primary hover:bg-secondary-hover hover:border hover:border-primary;
 }
 
 .ghost-button.button {
